--- a/tasks/enable_csmp.yml
+++ b/tasks/enable_csmp.yml
@@ -7,12 +7,11 @@
       operation: "kEnable"
       config:
         platform_network_configuration:
-          subnet_mask: "255.255.255.0"
-          type: "kPrivateNetwork"
-          default_gateway: "192.168.5.1"
-        pc_domain_name: "prism-central.cluster.local"
-        platform_ip_block_list:
-          - "192.168.5.2 192.168.5.64"
+          subnet_mask: "{{ cmsp_subnet_mask }}"
+          type: "{{ cmsp_network_type }}"
+          default_gateway: "{{ cmsp_network_default_gateway }}"
+        pc_domain_name: "{{ cmsp_domain_name }}"
+        platform_ip_block_list: "{{ cmsp_platform_ip_block_list }}"
     method: POST
     validate_certs: "{{ validate_certs }}"
     body_format: json
