--- a/tasks/validate_cmsp.yml
+++ b/tasks/validate_cmsp.yml
@@ -1,55 +1,70 @@
 ---
 # tasks file for enable_cmsp
-- name: Start task to validate that CMSP can be enabled
-  uri:
-    url: "{{ nutanix_api_v3 }}/prism_central/cmsp/configure"
-    body:
-      operation: "kValidate"
-      config:
-        platform_network_configuration:
-          subnet_mask: "255.255.255.0"
-          type: "kPrivateNetwork"
-          default_gateway: "192.168.5.1"
-        pc_domain_name: "prism-central.cluster.local"
-        platform_ip_block_list:
-          - "192.168.5.2 192.168.5.64"
-    method: POST
-    validate_certs: "{{ validate_certs }}"
-    body_format: json
-    status_code: 202
-    headers:
-      Authorization: "{{ nutanix_api_auth }}"
-  register: nutanix_cmsp_validation_result
-
-- name: Debug nutanix_cmsp_validation_result
-  debug:
-    var: nutanix_cmsp_validation_result.json
-  when:
-    - nutanix_debug
-
-- name: Wait for CMSP validatation task to complete
+- name: CSMP validation tasks
   block:
-    - name: Checking CMSP validatation task status
+    - name: Increment the block retry count
+      set_fact:
+        csmp_validation_retry_count: "{{ 0 if csmp_validation_retry_count is undefined else csmp_validation_retry_count | int + 1 }}"
+
+    - name: Start task to validate that CMSP can be enabled
       uri:
-        url: "{{ nutanix_api_v2 }}/tasks/{{ nutanix_cmsp_validation_result.json.task_uuid }}"
-        method: GET
+        url: "{{ nutanix_api_v3 }}/prism_central/cmsp/configure"
+        body:
+          operation: "kValidate"
+          config:
+            platform_network_configuration:
+              subnet_mask: "{{ cmsp_subnet_mask }}"
+              type: "{{ cmsp_network_type }}"
+              default_gateway: "{{ cmsp_network_default_gateway }}"
+            pc_domain_name: "{{ cmsp_domain_name }}"
+            platform_ip_block_list: "{{ cmsp_platform_ip_block_list }}"
+        method: POST
         validate_certs: "{{ validate_certs }}"
-        status_code: 200
+        body_format: json
+        status_code: 202
         headers:
           Authorization: "{{ nutanix_api_auth }}"
-      register: prism_cmsp_validate_task_status
-      until: prism_cmsp_validate_task_status.json.progress_status == 'Succeeded' or prism_cmsp_validate_task_status.json.progress_status == 'Failed'
-      retries: 10
-      delay: 5
+      register: nutanix_cmsp_validation_result
 
-- name: Debug nutanix_cmsp_validation_result
-  debug:
-    var: prism_cmsp_validate_task_status.json
-  when:
-    - nutanix_debug
+    - name: Debug nutanix_cmsp_validation_result
+      debug:
+        var: nutanix_cmsp_validation_result.json
+      when:
+        - nutanix_debug
 
-- name: Checking CMSP validatation task failed
-  ansible.builtin.fail:
-    msg: "AHV HA update task failed. {{ prism_cmsp_validate_task_status.json.message }}"
-  when:
-    - prism_cmsp_validate_task_status.json.progress_status == 'Failed'
+    - name: Wait for CMSP validatation task to complete
+      block:
+        - name: Checking CMSP validatation task status
+          uri:
+            url: "{{ nutanix_api_v2 }}/tasks/{{ nutanix_cmsp_validation_result.json.task_uuid }}"
+            method: GET
+            validate_certs: "{{ validate_certs }}"
+            status_code: 200
+            headers:
+              Authorization: "{{ nutanix_api_auth }}"
+          register: prism_cmsp_validate_task_status
+          until: prism_cmsp_validate_task_status.json.progress_status == 'Succeeded' or prism_cmsp_validate_task_status.json.progress_status == 'Failed'
+          retries: 10
+          delay: 5
+
+    - name: Debug nutanix_cmsp_validation_result
+      debug:
+        var: prism_cmsp_validate_task_status.json
+      when:
+        - nutanix_debug
+
+    - name: Checking CMSP validatation task failed
+      ansible.builtin.fail:
+        msg: "AHV HA update task failed. {{ prism_cmsp_validate_task_status.json.message }}"
+      when:
+        - prism_cmsp_validate_task_status.json.progress_status == 'Failed'
+
+  rescue:
+    - fail:
+        msg: Maximum retries of validation tasks reached
+      when: csmp_validation_retry_count | int == 5
+
+    - debug:
+        msg: "Validation tasks failed, attempting to validate again."
+
+    - include_task: validate_cmsp.yml
