--- a/tasks/validate_cmsp.yml
+++ b/tasks/validate_cmsp.yml
@@ -33,31 +33,19 @@
         - nutanix_debug
 
     - name: Wait for CMSP validatation task to complete
-      block:
-        - name: Checking CMSP validatation task status
-          uri:
-            url: "{{ nutanix_api_v2 }}/tasks/{{ nutanix_cmsp_validation_result.json.task_uuid }}"
-            method: GET
-            validate_certs: "{{ validate_certs }}"
-            status_code: 200
-            headers:
-              Authorization: "{{ nutanix_api_auth }}"
-          register: prism_cmsp_validate_task_status
-          until: prism_cmsp_validate_task_status.json.progress_status == 'Succeeded' or prism_cmsp_validate_task_status.json.progress_status == 'Failed'
-          retries: 10
-          delay: 5
+      ansible.builtin.import_role:
+        name: grdavies.nutanix_role_prism_monitor_task
+      vars:
+        nutanix_host: "{{ nutanix_host }}"
+        nutanix_username: "{{ nutanix_username }}"
+        nutanix_password: "{{ nutanix_password }}"
+        nutanix_debug: "{{ nutanix_debug }}"
+        nutanix_task_uuid: "{{ nutanix_cmsp_validation_result.json.task_uuid }}"
+        nutanix_task_retries: 10
+        nutanix_task_retry_delay: 5
 
-    - name: Debug nutanix_cmsp_validation_result
-      debug:
-        var: prism_cmsp_validate_task_status.json
-      when:
-        - nutanix_debug
-
-    - name: Checking CMSP validatation task failed
-      ansible.builtin.fail:
-        msg: "AHV HA update task failed. {{ prism_cmsp_validate_task_status.json.message }}"
-      when:
-        - prism_cmsp_validate_task_status.json.progress_status == 'Failed'
+    - set_fact:
+      prism_cmsp_validate_task_status: "{{ monitored_task }}"
 
   rescue:
     - fail:
