--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,8 +4,8 @@
   roles:
     - role: ../..
   vars:
-    nutanix_host: 10.38.179.39
+    nutanix_host: 10.38.186.39
     nutanix_username: admin
-    nutanix_password: nx2Tech283!
-    # nutanix_debug: True
+    nutanix_password: nx2Tech106!
+    nutanix_debug: True
     enable_cmsp: yes
