--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,12 @@
 # tasks file for nutanix_role_prism_cmsp
 - include_tasks: setup_api.yml
 
+- name: "Task can only be run against Prism Central"
+  ansible.builtin.fail:
+    msg: "{{nutanix_host}} is not a Prism Central instance. Please check the nutanix_host variable and try again."
+  when:
+    - nutanix_endpoint_prism_type != 'pc'
+
 - name: Check current CMSP State
   include_tasks: check_cmsp_state.yml
 
