--- a/tasks/enable_csmp.yml
+++ b/tasks/enable_csmp.yml
@@ -2,7 +2,7 @@
 # tasks file for enable_cmsp
 - name: Start task to enable CMSP
   uri:
-    url: "https://{{nutanix_host}}:{{nutanix_port}}/api/nutanix/v3/prism_central/cmsp/configure"
+    url: "https://{{ nutanix_host }}:{{ nutanix_port }}/api/nutanix/v3/prism_central/cmsp/configure"
     body:
       operation: "kEnable"
       config:
@@ -35,4 +35,10 @@
     nutanix_task_retry_delay: 120
 
 - set_fact:
-  prism_cmsp_enable_task_status: "{{ monitored_task }}"
+    prism_cmsp_enable_task_status: "{{ monitored_task }}"
+
+- name: Debug prism_cmsp_enable_task_status
+  debug:
+    var: prism_cmsp_enable_task_status.json
+  when:
+    - nutanix_debug
