--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,12 +16,12 @@
   when:
     - enable_cmsp
     - nutanix_cmsp_current_state == "Disabled"
-    - nutanix_cmsp_current_task_uuid == ""
+    - not nutanix_cmsp_current_task_uuid
 
 - name: Enable CMSP
   include_tasks: enable_csmp.yml
   when:
     - enable_cmsp
-    - prism_cmsp_validate_task_status.json.progress_status | default('') == 'Succeeded'
+    - prism_cmsp_validate_task_status.json.status | lower | default('') == 'succeeded'
     - nutanix_cmsp_current_state == "Disabled"
-    - nutanix_cmsp_current_task_uuid == ""
+    - not nutanix_cmsp_current_task_uuid
