--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,8 +4,8 @@
   roles:
     - role: ../..
   vars:
-    nutanix_host: 10.38.186.39
+    nutanix_host: 10.38.25.39
     nutanix_username: admin
-    nutanix_password: nx2Tech106!
-    nutanix_debug: True
+    nutanix_password: nx2Tech126!
+    nutanix_debug: yes
     enable_cmsp: yes
