--- a/tasks/validate_cmsp.yml
+++ b/tasks/validate_cmsp.yml
@@ -11,7 +11,7 @@
 
 - name: Start task to validate that CMSP can be enabled
   uri:
-    url: "https://{{nutanix_host}}:{{nutanix_port}}/api/nutanix/v3/prism_central/cmsp/configure"
+    url: "https://{{ nutanix_host }}:{{ nutanix_port }}/api/nutanix/v3/prism_central/cmsp/configure"
     body:
       operation: "kValidate"
       config:
@@ -39,9 +39,15 @@
   ansible.builtin.import_role:
     name: grdavies.nutanix_role_prism_monitor_task
   vars:
-    nutanix_task_uuid: "{{nutanix_cmsp_validation_result.json.task_uuid}}"
+    nutanix_task_uuid: "{{ nutanix_cmsp_validation_result.json.task_uuid }}"
     nutanix_task_retries: 10
     nutanix_task_retry_delay: 5
 
 - set_fact:
     prism_cmsp_validate_task_status: "{{ monitored_task }}"
+
+- name: Debug prism_cmsp_validate_task_status.json
+  debug:
+    var: prism_cmsp_validate_task_status.json
+  when:
+    - nutanix_debug
